# remote_screen

./: .CMakeLists.txt.un~  .Client.cpp.swp  .Client.cpp.un~  .Server.cpp.un~  .main.cpp.swp  .main.cpp.un~  CMakeLists.txt  Client.cpp  Server.cpp  main.cpp  test_function.cpp
include/: .Compresser.hpp.un~  .GUIManager.hpp.swp  .GUIManager.hpp.un~  .InputSimulator.hpp.un~  .ScreenShot.hpp.un~  .Shader.hpp.un~  .TCPManager.hpp.un~  .TCPSender.hpp.un~  Compresser.hpp  GUIManager.hpp  InputSimulator.hpp  ScreenShot.hpp  Shader.hpp  TCPManager.hpp
include/glad/: glad.h
shader/: .model.fs.un~  .model.vs.un~  .model_noAni.vs.un~  tft.fs  tvt.vs
src/: .Compresser.cpp.swp  .Compresser.cpp.un~  .GUIManager.cpp.swp  .GUIManager.cpp.un~  .TCPManager.cpp.un~  .TCPSender.cpp.un~  .main_s.cpp.un~  Compresser.cpp  GUIManager.cpp  TCPManager.cpp  glad.c
